# AoC

./: .gitignore  README.md  main.py  pyproject.toml
2020/1/: part_1.py  part_2.py
2021/1/: part1.py  part_1.py  part_2.py
2021/2/: part_1.py  part_2.py
AoC/: base_solver.py  main.py
AoC/year2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py
utils/: __init__.py  _get_input.py
year_2020/: 2020-LOG.md
year_2020/day_01/: solution.py
year_2021/day_01/: solution.py
year_2021/day_02/: solution.py
year_2021/day_03/: solution.py
year_2021/day_04/: solution.py
year_2021/day_05/: solution.py
year_2021/day_06/: solution.py
