[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "My attempts at Advent of Code"
authors = ["MinisterForHobos <james.hudson@outerbox.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
